# australia_microplastic

./: .gitignore  README.md  pyproject.toml
data/: EDA_raw.py  decompress.py  process.py
data/processed/: ins.py
src/datasets/: __init__.py
src/notebooks/: inference.py
src/notebooks/eda/: feature_modeling.py  full_dataset.py  quality_distribution.py  representation.py  spatiotemporal.py
src/notebooks/training/indexes/: rfr.py
src/notebooks/training/raw/: linreg.py  rfr.py
src/utils/: __init__.py  feature_eng.py  training.py
